--- a/templates/blog.html
+++ b/templates/blog.html
@@ -69,5 +69,27 @@
         </section>
     </div>
 
+    <section class="call-to-action">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="main-content">
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <span>UNI Blog</span>
+                                <h4>Title</h4>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="main-button">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
 </body>
 </html>
