--- a/templates/blog.html
+++ b/templates/blog.html
@@ -89,7 +89,28 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="blog-posts grid-system">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="all-blog-posts">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="blog-post">
+                                    <div class="blog-thumb">
+                                        <img src="assets/images/blog-thumb-01.jpg" alt="">
+                                    </div>
+                                    <div class="down-content">
+                                        <span>span 1</span>
+                                        <a href="post-details.html">
+                                            <h4>title 1</h4>
+                                        </a>
+                                        <ul class="post-info">
+                                            <li><a href="#">Admin</a></li>
+                                            <li><a href="#">May 31, 2020</a></li>
+                                            <li><a href="#">12 Comments</a></li>
+                                        
 
 </body>
 </html>
