--- a/templates/blog.html
+++ b/templates/blog.html
@@ -110,7 +110,22 @@
                                             <li><a href="#">Admin</a></li>
                                             <li><a href="#">May 31, 2020</a></li>
                                             <li><a href="#">12 Comments</a></li>
-                                        
+
+                                        <p>text 1</p>
+                                        <div class="post-options">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <ul class="post-tags">
+                                                        <li><i class="fa fa-tags"></i></li>
+                                                        <li><a href="#">tag 1</a>,</li>
+                                                        <li><a href="#">tag 2</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
 </body>
 </html>
