--- a/templates/blog.html
+++ b/templates/blog.html
@@ -188,6 +188,36 @@
                                 </div>
                             </div>
                             
+                            <div class="col-lg-6">
+                                <div class="blog-post">
+                                    <div class="blog-thumb">
+                                        <img src="assets/images/blog-thumb-04.jpg" alt="">
+                                    </div>
+                                    <div class="down-content">
+                                        <span>span 4</span>
+                                        <a href="post-details.html">
+                                            <h4>title 4</h4>
+                                        </a>
+                                        <ul class="post-info">
+                                            <li><a href="#">Admin</a></li>
+                                            <li><a href="#">May 16, 2020</a></li>
+                                            <li><a href="#">28 Comments</a></li>
+                                        </ul>
+                                        <p>text 4</p>
+                                        <div class="post-options">
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <ul class="post-tags">
+                                                        <li><i class="fa fa-tags"></i></li>
+                                                        <li><a href="#">tag 1</a>,</li>
+                                                        <li><a href="#">tag 2</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
 </body>
 </html>
