--- a/templates/blog.html
+++ b/templates/blog.html
@@ -281,5 +281,18 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-12">
+                                <ul class="page-numbers">
+                                    <li><a href="#">1</a></li>
+                                    <li class="active"><a href="#">2</a></li>
+                                    <li><a href="#">3</a></li>
+                                    <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
 </body>
 </html>
