--- a/templates/blog.html
+++ b/templates/blog.html
@@ -304,6 +304,53 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-12">
+                                <div class="sidebar-item recent-posts">
+                                    <div class="sidebar-heading">
+                                        <h2>Recent Posts</h2>
+                                    </div>
+                                    <div class="content">
+                                        <ul>
+                                            <li>
+                                                <a href="post-details.html">
+                                                    <h5>title 1</h5>
+                                                    <span>May 31, 2020</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="post-details.html">
+                                                    <h5>title 2</h5>
+                                                    <span>May 28, 2020</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="post-details.html">
+                                                    <h5>title 3</h5>
+                                                    <span>May 14, 2020</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="sidebar-item categories">
+                                    <div class="sidebar-heading">
+                                        <h2>Categories</h2>
+                                    </div>
+                                    <div class="content">
+                                        <ul>
+                                            <li><a href="#">- span 1</a></li>
+                                            <li><a href="#">- span 2</a></li>
+                                            <li><a href="#">- span 3</a></li>
+                                            <li><a href="#">- span 4</a></li>
+                                            <li><a href="#">- span 5</a></li>
+                                            <li><a href="#">- span 6</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
 
 </body>
 </html>
