--- a/templates/blog.html
+++ b/templates/blog.html
@@ -351,6 +351,33 @@
                                 </div>
                             </div>
 
+                            <div class="col-lg-12">
+                                <div class="sidebar-item tags">
+                                    <div class="sidebar-heading">
+                                        <h2>Tag Clouds</h2>
+                                    </div>
+                                    <div class="content">
+                                        <ul>
+                                            <li><a href="#">t1</a></li>
+                                            <li><a href="#">t2</a></li>
+                                            <li><a href="#">t3</a></li>
+                                            <li><a href="#">t4</a></li>
+                                            <li><a href="#">t5</a></li>
+                                            <li><a href="#">t6</a></li>
+                                            <li><a href="#">t7</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 </body>
 </html>
