--- a/templates/blog.html
+++ b/templates/blog.html
@@ -383,9 +383,9 @@
                     <ul class="social-icons">
                         <li><a href="#">Facebook</a></li>
                         <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Behance</a></li>
+                        <li><a href="#">telegram</a></li>
                         <li><a href="#">Linkedin</a></li>
-                        <li><a href="#">Dribbble</a></li>
+                        <li><a href="#">whatsapp</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-12">
