--- a/templates/contact.html
+++ b/templates/contact.html
@@ -173,7 +173,23 @@
     </section>
 
 
-
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <ul class="social-icons">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Telegram</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="#">Whatsapp</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-12">
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- Bootstrap core JavaScript -->
