--- a/templates/index.html
+++ b/templates/index.html
@@ -220,8 +220,8 @@
                           <div class="col-6">
                             <ul class="post-tags">
                               <li><i class="fa fa-tags"></i></li>
-                              <li><a href="#">Beauty</a>,</li>
-                              <li><a href="#">Nature</a></li>
+                              <li><a href="#">tag 1</a>,</li>
+                              <li><a href="#">tag 2</a></li>
                             </ul>
                           </div>
                           <div class="col-6">
@@ -255,8 +255,8 @@
                           <div class="col-6">
                             <ul class="post-tags">
                               <li><i class="fa fa-tags"></i></li>
-                              <li><a href="#">Best Templates</a>,</li>
-                              <li><a href="#">TemplateMo</a></li>
+                              <li><a href="#">tag 1</a>,</li>
+                              <li><a href="#">tag 2</a></li>
                             </ul>
                           </div>
                           <div class="col-6">
@@ -290,8 +290,8 @@
                           <div class="col-6">
                             <ul class="post-tags">
                               <li><i class="fa fa-tags"></i></li>
-                              <li><a href="#">HTML CSS</a>,</li>
-                              <li><a href="#">Photoshop</a></li>
+                              <li><a href="#">tag 1</a>,</li>
+                              <li><a href="#">tag 2</a></li>
                             </ul>
                           </div>
                           <div class="col-6">
@@ -396,9 +396,9 @@
             <ul class="social-icons">
               <li><a href="#">Facebook</a></li>
               <li><a href="#">Twitter</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="#">Telegram</a></li>
               <li><a href="#">Linkedin</a></li>
-              <li><a href="#">Dribbble</a></li>
+              <li><a href="#">Whatsapp</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
