--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="assets/css/owl.css">
 </head>
 <body>
-    
+    <div id="preloader">
+        <div class="jumper">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
 </body>
 </html>
