--- a/templates/about.html
+++ b/templates/about.html
@@ -52,6 +52,20 @@
             </div>
         </nav>
     </header>
+    <div class="heading-page header-text">
+        <section class="page-heading">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="text-content">
+                            <h4>about us</h4>
+                            <h2>more about us!</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
 </body>
 </html>
