--- a/templates/about.html
+++ b/templates/about.html
@@ -66,6 +66,62 @@
             </div>
         </section>
     </div>
+    <section class="about-us">
+        <div class="container">
 
+            <div class="row">
+                <div class="col-lg-12">
+                    <img src="assets/images/about-us.jpg" alt="">
+                    <p>about me</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4>title 1</h4>
+                    <p>text 1</p>
+                </div>
+                <div class="col-lg-6">
+                    <h4>title 2</h4>
+                    <p>text 2</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <h4>title 3</h4>
+                    <p>text 3</p>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h4>totle 4</h4>
+                    <p>text 4</p>
+                </div>
+                <div class="col-lg-4">
+                    <h4>title 5</h4>
+                    <p>text 5</p>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <h4>title 6</h4>
+                    <p>text 6</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4>title 7</h4>
+                    <p>text 7.</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4>title 8</h4>
+                    <p>text 8</p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4>title 9</h4>
+                    <p>text 9</p>
+                </div>
+            </div>
+
+   
 </body>
 </html>
