--- a/templates/post-details.html
+++ b/templates/post-details.html
@@ -24,5 +24,14 @@
 </head>
 <body>
     
+  <div id="preloader">
+    <div class="jumper">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div> 
+
+
 </body>
 </html>
