--- a/templates/post-details.html
+++ b/templates/post-details.html
@@ -65,6 +65,23 @@
   </nav>
 </header>
 
+<div class="heading-page header-text">
+  <section class="page-heading">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="text-content">
+            <h4>TITLE 1</h4>
+            <h2>TEXT</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+
+
 
 </body>
 </html>
