--- a/templates/post-details.html
+++ b/templates/post-details.html
@@ -80,7 +80,231 @@
   </section>
 </div>
 
+<section class="call-to-action">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="main-content">
+          <div class="row">
+            <div class="col-lg-8">
+              <span> TITLE 2</span>
+              <h4>TEXT</h4>
+            </div>
+            <div class="col-lg-4">
+              <div class="main-button">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
+
+<section class="blog-posts grid-system">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="all-blog-posts">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="blog-post">
+                <div class="blog-thumb">
+                  <img src="assets/images/blog-post-02.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <span>TITE </span>
+                  <a href="post-details.html"><h4>TEXT</h4></a>
+                  <ul class="post-info">
+                    <li><a href="#">Admin</a></li>
+                    <li><a href="#">May 12, 2020</a></li>
+                    <li><a href="#">10 Comments</a></li>
+                  </ul>
+                  <p>text</p>
+                  <div class="post-options">
+                    <div class="row">
+                      <div class="col-6">
+                        <ul class="post-tags">
+                          <li><i class="fa fa-tags"></i></li>
+                          <li><a href="#">tag 1</a>,</li>
+                          <li><a href="#">tag 2</a></li>
+                        </ul>
+                      </div>
+                      <div class="col-6">
+                        <ul class="post-share">
+                          <li><i class="fa fa-share-alt"></i></li>
+                          <li><a href="#">Facebook</a>,</li>
+                          <li><a href="#"> Twitter</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="sidebar-item comments">
+                <div class="sidebar-heading">
+                  <h2>4 comments</h2>
+                </div>
+                <div class="content">
+                  <ul>
+                    <li>
+                      <div class="author-thumb">
+                        <img src="assets/images/comment-author-01.jpg" alt="">
+                      </div>
+                      <div class="right-content">
+                        <h4>person 1<span>May 16, 2020</span></h4>
+                        <p>person 1 comment</p>
+                      </div>
+                    </li>
+                    <li class="replied">
+                      <div class="author-thumb">
+                        <img src="assets/images/comment-author-02.jpg" alt="">
+                      </div>
+                      <div class="right-content">
+                        <h4>person 2<span>May 20, 2020</span></h4>
+                        <p>person 2 comment</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="author-thumb">
+                        <img src="assets/images/comment-author-03.jpg" alt="">
+                      </div>
+                      <div class="right-content">
+                        <h4>person 3<span>May 16, 2020</span></h4>
+                        <p>person 3 comment</p>
+                      </div>
+                    </li>
+                    <li class="replied">
+                      <div class="author-thumb">
+                        <img src="assets/images/comment-author-02.jpg" alt="">
+                      </div>
+                      <div class="right-content">
+                        <h4>person 4<span>May 22, 2020</span></h4>
+                        <p>person 4 comment</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="sidebar-item submit-comment">
+                <div class="sidebar-heading">
+                  <h2>Your comment</h2>
+                </div>
+                <div class="content">
+                  <form id="comment" action="#" method="post">
+                    <div class="row">
+                      <div class="col-md-6 col-sm-12">
+                        <fieldset>
+                          <input name="name" type="text" id="name" placeholder="Your name" required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-6 col-sm-12">
+                        <fieldset>
+                          <input name="email" type="text" id="email" placeholder="Your email" required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12 col-sm-12">
+                        <fieldset>
+                          <input name="subject" type="text" id="subject" placeholder="Subject">
+                        </fieldset>
+                      </div>
+                      <div class="col-lg-12">
+                        <fieldset>
+                          <textarea name="message" rows="6" id="message" placeholder="Type your comment" required=""></textarea>
+                        </fieldset>
+                      </div>
+                      <div class="col-lg-12">
+                        <fieldset>
+                          <button type="submit" id="form-submit" class="main-button">Submit</button>
+                        </fieldset>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="sidebar">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="sidebar-item search">
+                <form id="search_form" name="gs" method="GET" action="#">
+                  <input type="text" name="q" class="searchText" placeholder="type to search..." autocomplete="on">
+                </form>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="sidebar-item recent-posts">
+                <div class="sidebar-heading">
+                  <h2>Recent Posts</h2>
+                </div>
+                <div class="content">
+                  <ul>
+                    <li><a href="post-details.html">
+                      <h5>resent post 1</h5>
+                      <span>May 31, 2020</span>
+                    </a></li>
+                    <li><a href="post-details.html">
+                      <h5>resent post 2</h5>
+                      <span>May 28, 2020</span>
+                    </a></li>
+                    <li><a href="post-details.html">
+                      <h5>resent post 3</h5>
+                      <span>May 14, 2020</span>
+                    </a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="sidebar-item categories">
+                <div class="sidebar-heading">
+                  <h2>Categories</h2>
+                </div>
+                <div class="content">
+                  <ul>
+                    <li><a href="#">- CAT1</a></li>
+                    <li><a href="#">- CAT2</a></li>
+                    <li><a href="#">- CAT3</a></li>
+                    <li><a href="#">- CAT3</a></li>
+                    <li><a href="#">- CAT4</a></li>
+                    <li><a href="#">- CAT5 &amp; CAT6</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="sidebar-item tags">
+                <div class="sidebar-heading">
+                  <h2>Tag Clouds</h2>
+                </div>
+                <div class="content">
+                  <ul>
+                    <li><a href="#">TAG 1</a></li>
+                    <li><a href="#">TAG 2</a></li>
+                    <li><a href="#">TAG 3</a></li>
+                    <li><a href="#">TAG 4</a></li>
+                    <li><a href="#">TAG 5</a></li>
+                    <li><a href="#">TAG 6</a></li>
+                    <li><a href="#">TAG 7</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 </body>
