--- a/templates/assets/css/template.css
+++ b/templates/assets/css/template.css
@@ -13,4 +13,15 @@ body {
       color: #7a7a7a;
       line-height: 30px;
   }
-  
+a {
+	text-decoration: none!important;
+}
+ul {
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	margin: 0px;
+}
