--- a/templates/assets/css/flex-slider.css
+++ b/templates/assets/css/flex-slider.css
@@ -5,3 +5,18 @@
   font-weight: normal;
   font-style: normal;
 }
+.flex-container a:hover,
+.flex-slider a:hover {
+  outline: none;
+}
+.slides,
+.slides > li,
+.flex-control-nav,
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.flex-pauseplay span {
+  text-transform: capitalize;
+}
