--- a/templates/assets/css/template.css
+++ b/templates/assets/css/template.css
@@ -125,3 +125,48 @@ header .navbar {
 	font-style: normal;
 	color: #f48840;
 }
+#navbarResponsive {
+	z-index: 999;
+}
+.navbar-collapse {
+	text-align: center;
+}
+.navbar .navbar-nav .nav-item {
+	margin: 0px 15px;
+}
+.navbar .navbar-nav a.nav-link {
+	text-transform: capitalize;
+	font-size: 15px;
+	font-weight: 800;
+	text-transform: uppercase;
+	letter-spacing: 0.5px;
+	color: #1e1e1e;
+	transition: all 0.3s;
+}
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .active>.nav-link,
+.navbar .navbar-nav .nav-link.active,
+.navbar .navbar-nav .nav-link.show,
+.navbar .navbar-nav .show>.nav-link {
+	color: #f48840;
+}
+.navbar .navbar-toggler-icon {
+	background-image: none;
+}
+.navbar .navbar-toggler {
+	border-color: #fff;
+	background-color: #f48840;	
+	height: 46px;
+	outline: none;
+	border-radius: 0px;
+	position: absolute;
+	right: 30px;
+	top: 25px;
+}
+.navbar .navbar-toggler-icon:after {
+	content: '\f0c9';
+	color: #fff;
+	font-size: 18px;
+	line-height: 30px;
+	font-family: 'FontAwesome';
+}
