--- a/templates/blog/includes/head.html
+++ b/templates/blog/includes/head.html
@@ -15,7 +15,7 @@
 
 <!-- Additional CSS Files -->
 <link rel="stylesheet" href="{% static 'blog/assets/css/fontawesome.css' %}">
-<link rel="stylesheet" href="{% static 'blog/assets/css/uni_blog.css' %}">
+<link rel="stylesheet" href="{% static 'blog/assets/css/uniblog.css' %}">
 <link rel="stylesheet" href="{% static 'blog/assets/css/owl.css' %}">
 
 <script src="https://kit.fontawesome.com/902e17b72f.js" crossorigin="anonymous"></script>
