--- a/templates/registration/account_activation_done.html
+++ b/templates/registration/account_activation_done.html
@@ -1,6 +1,6 @@
 {% extends 'registration/auth-base.html' %}
 {% block title %}
-    Activation email sent | Django Blog
+    Activation email sent | Uni Blog
 {% endblock %}
 
 {% block content %}
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                    <a href="{% url 'blog:home' %}"><h2 class="heading-section">Django Blog</h2></a>
+                    <a href="{% url 'blog:home' %}"><h2 class="heading-section">Uni Blog</h2></a>
                 </div>
             </div>
             <div class="row justify-content-center">
