--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block title %}
-    Sign Up | Django BLog
+    Sign Up | Uni BLog
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
-                    <a href="{% url 'blog:home' %}"><h2 class="heading-section">Django Blog</h2></a>
+                    <a href="{% url 'blog:home' %}"><h2 class="heading-section">Uni Blog</h2></a>
                 </div>
             </div>
             <div class="row justify-content-center">
