--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -5,7 +5,7 @@
     <a href="{% url 'blog:home' %}" class="brand-link">
         <img src="{% static 'registration/adminlte/assets/img/AdminLTELogo.png' %}"
              class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">Django Blog</span>
+        <span class="brand-text font-weight-light">Uni Blog</span>
     </a>
 
     <!-- Sidebar -->
