--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -3,7 +3,7 @@
 {% load render_partial %}
 {% load social_share %}
 
-{% block title %}Django Blog{% endblock %}
+{% block title %}Uni Blog{% endblock %}
 
 {% block content %}
     <div class="main-banner header-text">
